Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}

0.135     2018-03-04 19:47:45Z
          - fix CONTRIBUTING template that might sometimes generate an
            undefined warning (tickling tests with AUTHOR_TESTING=1 under
            Text::Template 1.48)

0.134     2018-03-03 08:44:42Z
          - always report installed version of Encode in
            t/00-report-prereqs.t, as it is called by core code (PerlIO).

0.133     2018-01-14 08:25:00Z
          - new 'plugin_prereq_phase' and 'plugin_prereq_relationship'
            configuration options, which control whether and how to inject
            plugins used by this bundle into distribution prerequisites
          - plugins used in the distribution build are now injected into
            x_Dist_Zilla/requires by default, rather than develop/suggests

0.132     2017-12-13 07:15:09Z
          - fix test to work with [@Git::VersionManager] 0.003

0.131     2017-09-16 04:29:15Z
          - spelling fix in generated CONTRIBUTING file (thanks, Edward
            Betts!)
          - added .travis.yml to minting profile
          - plugins used by the bundle are now injected into develop-suggests
            prerequisites, rather than develop-requires, so Travis no longer
            feels obliged to install them when testing the built distribution

0.130     2017-08-28 01:13:46Z
          - fix test that is broken with older [CopyFilesFromRelease]
          - fix inverted condition in [Git::Check] configuration (wrong since
            version 0.126)
          - fix airplane mode, broken since version 0.127
          - [@Git::VersionManager] and [MetaProvides::Update] are moved off to
            their own distribution, Dist-Zilla-PluginBundle-Git-VersionManager

0.129     2017-08-21 04:45:42Z
          - fix a new test to avoid triggering the "looks like you're
            installing from cpan, rather than building a distribution in the