@@ -123,6 +123,7 @@ my @expected_files = qw(
     xt/author/eol.t
     xt/author/kwalitee.t
     xt/author/pod-spell.t
+    xt/author/changes_has_content.t
     xt/author/clean-namespaces.t
     xt/release/changes_has_content.t
     xt/release/cpan-changes.t
